--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry-vials.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry-vials.yml
@@ -117,3 +117,18 @@
               Quantity: 30
     - type: Tag
       tags: []
+
+- type: entity
+  id: SyndizineChemistryVial
+  name: syndizine vial
+  parent: BaseChemistryEmptyVial
+  components:
+    - type: SolutionContainerManager
+      solutions:
+        beaker:
+          maxVol: 30
+          reagents:
+            - ReagentId: Syndizine
+              Quantity: 20
+    - type: Tag
+      tags: []
