--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -232,6 +232,7 @@
   suffix: Job spawn
   components:
   - type: ContainerSpawnPoint
+    spawnType: Job
     containerId: station_ai_mind_slot
     job: StationAi
   - type: Sprite
