--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -108,6 +108,7 @@
   - type: StationAiHolder
     slot:
       name: station-ai-mind-slot
+      locked: true
       whitelist:
         tags:
         - StationAi
