Fix AI being ejectable (#31561)

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -116,6 +116,7 @@
   - type: StationAiHolder
     slot:
       name: station-ai-mind-slot
+      locked: true
       whitelist:
         tags:
         - StationAi
