--- a/Resources/Prototypes/Entities/Structures/Doors/Windoors/base_structurewindoors.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Windoors/base_structurewindoors.yml
@@ -11,6 +11,7 @@
       Brute:
         collection: GlassSmash
   - type: InteractionOutline
+  - type: StationAiWhitelist
   - type: Physics
   - type: Fixtures
     fixtures:
