--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -640,7 +640,7 @@
   name: loadout-group-salvage-specialist-neck
   loadouts:
   - MinerCloak
-  - Mantle
+  - SaMantle
   - BrownScarf
 
 - type: loadoutGroup
