updated definition for salvage mantle

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -46,6 +46,11 @@
     neck: ClothingNeckCloakMiner
 
 - type: loadout
+  id: SaMantle
+  equipment:
+    neck: ClothingNeckMantle
+
+- type: loadout
   id: BrownScarf
   equipment:
     neck: ClothingNeckScarfStripedBrown
