--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -1273,16 +1273,36 @@
   name: cell sequencer machine board
   description: A machine printed circuit board for a cell sequencer.
   components:
-    - type: Sprite
-      state: science
-    - type: MachineBoard
-      prototype: CellSequencer
-      stackRequirements:
-        Plasma: 5
-        MatterBin: 1
-        Glass: 1
-        Steel: 2
-      tagRequirements:
-        Dish:
-          amount: 2
-          defaultPrototype: PetriDish
+  - type: Sprite
+    state: science
+  - type: MachineBoard
+    prototype: CellSequencer
+    stackRequirements:
+      Plasma: 5
+      MatterBin: 1
+      Glass: 1
+      Steel: 2
+    tagRequirements:
+      Dish:
+        amount: 2
+        defaultPrototype: PetriDish
+
+- type: entity
+  id: CellularFusionCircuitboard
+  parent: BaseMachineCircuitboard
+  name: cellular fusion machine board
+  description: A machine printed circuit board for a cellular fusion.
+  components:
+  - type: Sprite
+    state: science
+  - type: MachineBoard
+    prototype: CellularFusion
+    stackRequirements:
+      Plasma: 5
+      MatterBin: 1
+      Glass: 1
+      Steel: 2
+    tagRequirements:
+      Dish:
+        amount: 2
+        defaultPrototype: PetriDish
