--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -12126,11 +12126,6 @@ entities:
     - type: Transform
       pos: 1.5,-21.5
       parent: 60
-  - uid: 13738
-    components:
-    - type: Transform
-      pos: 18.5,-18.5
-      parent: 60
   - uid: 13869
     components:
     - type: Transform
@@ -12179,11 +12174,6 @@ entities:
     components:
     - type: Transform
       pos: -26.5,22.5
-      parent: 60
-  - uid: 16171
-    components:
-    - type: Transform
-      pos: 18.5,-17.5
       parent: 60
   - uid: 17568
     components:
@@ -62362,6 +62352,28 @@ entities:
     - type: Transform
       pos: 51.475224,-22.209888
       parent: 60
+- proto: CurtainsRedOpen
+  entities:
+  - uid: 23090
+    components:
+    - type: Transform
+      pos: 20.5,-21.5
+      parent: 60
+  - uid: 23091
+    components:
+    - type: Transform
+      pos: 21.5,-21.5
+      parent: 60
+  - uid: 24816
+    components:
+    - type: Transform
+      pos: 22.5,-21.5
+      parent: 60
+  - uid: 24817
+    components:
+    - type: Transform
+      pos: 23.5,-21.5
+      parent: 60
 - proto: CurtainsWhiteOpen
   entities:
   - uid: 21250
@@ -109124,6 +109136,11 @@ entities:
     - type: Transform
       pos: 47.487705,-12.25134
       parent: 60
+  - uid: 23089
+    components:
+    - type: Transform
+      pos: 43.51102,-1.4624498
+      parent: 60
 - proto: MedkitBurnFilled
   entities:
   - uid: 5675
@@ -116408,34 +116425,32 @@ entities:
     - type: Transform
       pos: -57.5,29.5
       parent: 60
-- proto: RadiationCollector
+- proto: RadiationCollectorFullTank
   entities:
   - uid: 8211
     components:
     - type: Transform
-      pos: 5.5,38.5
+      pos: 4.5,38.5
+      parent: 60
+  - uid: 11527
+    components:
+    - type: Transform
+      pos: -4.5,38.5
+      parent: 60
+  - uid: 13738
+    components:
+    - type: Transform
+      pos: -3.5,38.5
       parent: 60
   - uid: 16160
     components:
     - type: Transform
       pos: 6.5,38.5
       parent: 60
-  - uid: 16411
+  - uid: 16171
     components:
     - type: Transform
-      pos: -3.5,38.5
-      parent: 60
-  - uid: 17479
-    components:
-    - type: Transform
-      pos: 4.5,38.5
-      parent: 60
-- proto: RadiationCollectorFullTank
-  entities:
-  - uid: 11527
-    components:
-    - type: Transform
-      pos: -4.5,38.5
+      pos: 5.5,38.5
       parent: 60
   - uid: 16384
     components:
@@ -134899,6 +134914,11 @@ entities:
     - type: Transform
       pos: -51.5,-19.5
       parent: 60
+  - uid: 7071
+    components:
+    - type: Transform
+      pos: 18.5,-16.5
+      parent: 60
   - uid: 7077
     components:
     - type: Transform
@@ -134958,6 +134978,11 @@ entities:
     components:
     - type: Transform
       pos: -31.5,-4.5
+      parent: 60
+  - uid: 16411
+    components:
+    - type: Transform
+      pos: 18.5,-19.5
       parent: 60
 - proto: TobaccoSeeds
   entities:
@@ -152279,11 +152304,6 @@ entities:
     - type: Transform
       pos: 15.5,-25.5
       parent: 60
-  - uid: 2910
-    components:
-    - type: Transform
-      pos: 18.5,-16.5
-      parent: 60
   - uid: 3347
     components:
     - type: Transform
@@ -152348,11 +152368,6 @@ entities:
     components:
     - type: Transform
       pos: 14.5,12.5
-      parent: 60
-  - uid: 7071
-    components:
-    - type: Transform
-      pos: 18.5,-19.5
       parent: 60
   - uid: 7719
     components:
@@ -156484,6 +156499,11 @@ entities:
       parent: 60
 - proto: WoodDoor
   entities:
+  - uid: 2910
+    components:
+    - type: Transform
+      pos: 18.5,-18.5
+      parent: 60
   - uid: 3637
     components:
     - type: Transform
@@ -156507,6 +156527,11 @@ entities:
       name: Confessional
     - type: Transform
       pos: -18.5,19.5
+      parent: 60
+  - uid: 17479
+    components:
+    - type: Transform
+      pos: 18.5,-17.5
       parent: 60
 - proto: Wrench
   entities:
