Fix some contraband issues

--- a/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
@@ -80,7 +80,7 @@
     price: 3000
 
 - type: entity
-  parent: [ClothingShoesBootsMag, BaseJetpack, BaseSyndicateContraband]
+  parent: [BaseSyndicateContraband, ClothingShoesBootsMag, BaseJetpack]
   id: ClothingShoesBootsMagSyndie
   name: blood-red magboots
   description: Reverse-engineered magnetic boots that have a heavy magnetic pull and integrated thrusters. It can hold 0.75 L of gas.
