Add TrashTag to organs

--- a/Resources/Prototypes/Body/Organs/Animal/animal.yml
+++ b/Resources/Prototypes/Body/Organs/Animal/animal.yml
@@ -21,7 +21,8 @@
       - chicken # everything kinda tastes like chicken
   - type: Tag
     tags:
-      - Meat
+    - Meat
+    - Trash
 
 - type: entity
   id: BaseAnimalOrgan
