--- a/Resources/Prototypes/Body/Organs/arachnid.yml
+++ b/Resources/Prototypes/Body/Organs/arachnid.yml
@@ -23,7 +23,8 @@
           Quantity: 5
   - type: Tag
     tags:
-      - Meat
+    - Meat
+    - Trash
 
 - type: entity
   id: OrganArachnidStomach
