--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -2432,6 +2432,79 @@
       bloodReagent: Laughter
 
 - type: entity
+  name: BROS
+  parent: [ SimpleMobBase, MobCombat ]
+  id: MobBROS
+  description: OH FUCK IT'S BROS
+  components:
+    - type: Sprite
+      drawdepth: Mobs
+      layers:
+      - map: ["enum.DamageStateVisualLayers.Base"]
+        state: bros
+        sprite: Mobs/Animals/bros.rsi
+    - type: NpcFactionMember
+      factions:
+        - Xeno
+    - type: ReplacementAccent
+      accent: xeno
+    - type: InputMover
+    - type: MobMover
+    - type: HTN
+      rootTask:
+        task: SimpleHostileCompound
+    - type: Fixtures
+      fixtures:
+        fix1:
+          shape:
+            !type:PhysShapeCircle
+            radius: 0.35
+          density: 130
+          mask:
+          - MobMask
+          layer:
+          - MobLayer
+    - type: DamageStateVisuals
+      states:
+        Alive:
+          Base: bros
+        Dead:
+          Base: bros-dead
+    - type: MobThresholds
+      thresholds:
+        0: Alive
+        150: Dead
+    - type: MeleeWeapon
+      altDisarm: false
+      angle: 0
+      animation: WeaponArcPunch
+      soundHit:
+        path: /Audio/Animals/bros_hit.ogg
+      damage:
+        types:
+          Blunt: 8
+    - type: Speech
+      speechVerb: Cluwne
+    - type: Bloodstream
+      bloodMaxVolume: 150
+      bloodReagent: VentCrud
+    - type: NoSlip
+    - type: Butcherable
+      spawned:
+      - id: FoodLingzhi
+        amount: 2
+    - type: PassiveDamage
+      allowedStates:
+      - Alive
+      damageCap: 89
+      damage:
+        types:
+          Poison: -0.07
+        groups:
+          Brute: -0.07
+          Burn: -0.07
+
+- type: entity
   name: wizard spider
   parent: MobGiantSpider
   id: MobGiantSpiderWizard
