--- a/Resources/Prototypes/Entities/Markers/Spawners/Conditional/timed.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Conditional/timed.yml
@@ -79,3 +79,23 @@
     - type: TimedSpawner
       prototypes:
         - MobCockroach
+
+- type: entity
+  name: Bros Vent Spawner
+  id: BrosVentSpawner
+  parent: MarkerBase
+  components:
+    - type: Sprite
+      layers:
+        - state: blue
+        - sprite: Mobs/Animals/bros.rsi
+          state: bros
+        - state: timed
+    - type: Timer
+    - type: ClusterSpawner
+      prototypes:
+        - MobBros
+        # - MobSorb
+      chance: 0.9
+      minimumEntitiesSpawned: 7
+      maximumEntitiesSpawned: 10
