Fix Sec Webbing + Remove command sec glasses

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -612,7 +612,7 @@
 - type: entity
   parent: ClothingBeltSecurity
   id: ClothingBeltSecurityWebbing
-  name: security carrier
+  name: security webbing # GreyStation - We keepin' webbings
   description: Unique and versatile chest rig, can hold security gear.
   components:
   - type: Sprite
