--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -49,7 +49,7 @@
     - id: RubberStampCaptain
     - id: SpaceCash1000
     - id: WeaponDisabler
-    - id: ClothingEyesGlassesCommand
+    #- id: ClothingEyesGlassesCommand # GreyStation - Removal
 
 # No laser table + Laser table
 - type: entityTable
@@ -132,7 +132,7 @@
     - id: RubberStampDenied
     - id: RubberStampHop
     - id: WeaponDisabler
-    - id: ClothingEyesHudCommand
+    #- id: ClothingEyesHudCommand # GreyStation - Removal
 
 - type: entity
   id: LockerHeadOfPersonnelFilled
