--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -2473,7 +2473,7 @@
     - type: MobThresholds
       thresholds:
         0: Alive
-        150: Dead
+        20: Dead
     - type: MeleeWeapon
       altDisarm: false
       angle: 0
@@ -2489,20 +2489,67 @@
       bloodMaxVolume: 150
       bloodReagent: VentCrud
     - type: NoSlip
-    - type: Butcherable
-      spawned:
-      - id: FoodLingzhi
-        amount: 1
-    - type: PassiveDamage
-      allowedStates:
-      - Alive
-      damageCap: 89
+    - type: ZombieImmune
+
+- type: entity
+  name: SORB
+  parent: [ SimpleMobBase, MobCombat ]
+  id: MobSorb
+  description: SORB S'TI KCUF HO
+  components:
+    - type: Sprite
+      drawdepth: Mobs
+      layers:
+      - map: ["enum.DamageStateVisualLayers.Base"]
+        state: sorb
+        sprite: Mobs/Animals/bros.rsi
+    - type: NpcFactionMember
+      factions:
+        - Xeno
+    - type: ReplacementAccent
+      accent: xeno
+    - type: InputMover
+    - type: MobMover
+    - type: HTN
+      rootTask:
+        task: SimpleHostileCompound
+    - type: Fixtures
+      fixtures:
+        fix1:
+          shape:
+            !type:PhysShapeCircle
+            radius: 0.35
+          density: 130
+          mask:
+          - MobMask
+          layer:
+          - MobLayer
+    - type: DamageStateVisuals
+      states:
+        Alive:
+          Base: sorb
+        Dead:
+          Base: sorb-dead
+    - type: MobThresholds
+      thresholds:
+        0: Alive
+        20: Dead
+    - type: MeleeWeapon
+      altDisarm: false
+      angle: 0
+      animation: WeaponArcPunch
+      soundHit:
+        path: /Audio/Animals/bros_hit.ogg
       damage:
         types:
-          Poison: -0.07
-        groups:
-          Brute: -0.07
-          Burn: -0.07
+          Blunt: 1
+    - type: Speech
+      speechVerb: Cluwne
+    - type: Bloodstream
+      bloodMaxVolume: 150
+      bloodReagent: VentCrud
+    - type: NoSlip
+    - type: ZombieImmune
 
 - type: entity
   name: wizard spider
