--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -88,8 +88,8 @@
           Quantity: 6
         - ReagentId: Vitamin
           Quantity: 2
-        #- ReagentId: JuiceCherry
-         #Quantity: 2
+        - ReagentId: JuiceCherry
+          Quantity: 2
   - type: Tag
     tags:
     - Fruit
