--- a/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
+++ b/Resources/Prototypes/Entities/Clothing/Neck/base_clothingneck.yml
@@ -16,7 +16,7 @@
     spawned:
     - id: MaterialCloth1
       amount: 2
-  - type: PhysicalComposition # 50% of amount cloth on buthering
+  - type: PhysicalComposition # 50% of the amount of cloth you'd obtain upon butchering
     materialComposition:
       Cloth: 100
   - type: Food
