--- a/Resources/Prototypes/Entities/Structures/Walls/railing.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/railing.yml
@@ -19,7 +19,7 @@
     damageModifierSet: FlimsyMetallic
   - type: Climbable
   - type: Construction
-    node: railing
+    graph: Railing
   - type: RCDDeconstructable
     cost: 2
     delay: 2
